--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
 }
 
 .content-center {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
     width: 100%;
     max-width: 300px;
     margin: auto;
